[tool.poetry]
name = "nlp-transformers"
version = "0.1.0"
description = ""
authors = ["Dave Shoup <dave.shoup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
transformers = "^4.36.0"
pandas = "^2.1.4"
plotly = "^5.18.0"
datasets = "^2.15.0"
ipywidgets = "^8.1.1"
tqdm = "^4.66.1"
huggingface-hub = {extras = ["cli"], version = "^0.19.4"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
